--- a/changelogs/templates/changelogs/feed.html
+++ b/changelogs/templates/changelogs/feed.html
@@ -17,7 +17,7 @@
             <div class="display-3 my-5" role="alert">
                 Empty feed =(
             </div>
-            <a href="{% url 'changelogs:manage_subscriptions' %}">Manage your subscriptions</a>
+            <a href="{% url 'changelogs:subscriptions' %}">Manage your subscriptions</a>
         {% endif %}
     </div>
 {% endblock %}
