--- a/changelogs/templates/changelogs/projects.html
+++ b/changelogs/templates/changelogs/projects.html
@@ -34,7 +34,7 @@
                     <a href="{% url 'changelogs:add_project' %}">Add project</a>
                 </li>
                 <li>
-                    <a href="{% url 'changelogs:manage_subscriptions' %}">Manage your subscriptions</a>
+                    <a href="{% url 'changelogs:subscriptions' %}">Manage your subscriptions</a>
                 </li>
             </ul>
         {% endif %}
