Added label for team input

--- a/changelogs/templates/changelogs/edit_project.html
+++ b/changelogs/templates/changelogs/edit_project.html
@@ -24,6 +24,7 @@
                 {{ form.is_public.errors }}
             </div>
             <div class="form-group">
+                <label for="{{ form.team.id_for_label }}">Team</label>
                 {{ form.team }}
                 {{ form.team.errors }}
             </div>
