Fixed image url to absolute in markdown

--- a/changelogs/templates/changelogs/_version.html
+++ b/changelogs/templates/changelogs/_version.html
@@ -2,5 +2,5 @@
 
 <p class="text-secondary"><small>{{ version.date_time }}</small></p>
 <article>
-    {{ version.body | markdown | safe }}
+    {{ version| markdown | safe }}
 </article>
