--- a/changelogs/templates/changelogs/add_project.html
+++ b/changelogs/templates/changelogs/add_project.html
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group form-check">
                 {{ form.is_public }}
-                <label class="form-check-label" for="{{ form.is_public.id_for_label }}">Is public?</label>
+                <label class="form-check-label" for="{{ form.is_public.id_for_label }}">Is public</label>
                 {{ form.is_public.errors }}
             </div>
             <input type="submit" class="btn btn-primary" value="Submit">
