--- a/changelogs/templates/404.html
+++ b/changelogs/templates/404.html
@@ -4,19 +4,7 @@
 <html lang="en">
 <head>
     {% if not debug %}
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46277263-13"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-
-            gtag('js', new Date());
-
-            gtag('config', 'UA-46277263-13');
-        </script>
+        {% include "changelogs/_gtag.html" %}
     {% endif %}
 
     <meta charset="utf-8">
